Creato con Colaboratory

--- a/Lab03-03/LabTopic3c_using_several_classifiers_nocode.ipynb
+++ b/Lab03-03/LabTopic3c_using_several_classifiers_nocode.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gullpet/magistrale/blob/master/Data%20Mining%20M/Lab/Lab03-03/LabTopic3c_using_several_classifiers_nocode.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gullpet/dmlab/blob/master/Lab03-03/LabTopic3c_using_several_classifiers_nocode.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -308,14 +308,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 42,
       "metadata": {
         "scrolled": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8QXfwutITbnE",
-        "outputId": "f7e6fd3c-c3f9-4e30-8c5b-c3f05e7ab6cf"
+        "outputId": "ffcc62c7-dd2e-42dd-a650-0643a9f9ae3a"
       },
       "outputs": [
         {
@@ -325,29 +325,29 @@
             "Trying model Decision Tree       \n",
             "Best parameters set found on train set:\n",
             "\n",
-            "{'max_depth': 5}\n",
+            "{'max_depth': 6}\n",
             "\n",
             "Grid scores on train set:\n",
             "\n",
             "0.696 (+/-0.033) for {'max_depth': 1}\n",
             "0.902 (+/-0.130) for {'max_depth': 2}\n",
             "0.928 (+/-0.110) for {'max_depth': 3}\n",
-            "0.946 (+/-0.089) for {'max_depth': 4}\n",
-            "0.964 (+/-0.036) for {'max_depth': 5}\n",
-            "0.937 (+/-0.124) for {'max_depth': 6}\n",
-            "0.937 (+/-0.124) for {'max_depth': 7}\n",
+            "0.937 (+/-0.124) for {'max_depth': 4}\n",
+            "0.946 (+/-0.089) for {'max_depth': 5}\n",
+            "0.964 (+/-0.036) for {'max_depth': 6}\n",
+            "0.964 (+/-0.036) for {'max_depth': 7}\n",
             "0.937 (+/-0.124) for {'max_depth': 8}\n",
             "0.937 (+/-0.124) for {'max_depth': 9}\n",
-            "0.964 (+/-0.036) for {'max_depth': 10}\n",
-            "0.946 (+/-0.089) for {'max_depth': 11}\n",
-            "0.955 (+/-0.058) for {'max_depth': 12}\n",
+            "0.946 (+/-0.089) for {'max_depth': 10}\n",
+            "0.964 (+/-0.036) for {'max_depth': 11}\n",
+            "0.937 (+/-0.124) for {'max_depth': 12}\n",
             "0.937 (+/-0.124) for {'max_depth': 13}\n",
-            "0.946 (+/-0.089) for {'max_depth': 14}\n",
-            "0.946 (+/-0.089) for {'max_depth': 15}\n",
-            "0.955 (+/-0.058) for {'max_depth': 16}\n",
+            "0.964 (+/-0.036) for {'max_depth': 14}\n",
+            "0.937 (+/-0.124) for {'max_depth': 15}\n",
+            "0.937 (+/-0.124) for {'max_depth': 16}\n",
             "0.946 (+/-0.089) for {'max_depth': 17}\n",
-            "0.964 (+/-0.036) for {'max_depth': 18}\n",
-            "0.937 (+/-0.124) for {'max_depth': 19}\n",
+            "0.955 (+/-0.058) for {'max_depth': 18}\n",
+            "0.946 (+/-0.089) for {'max_depth': 19}\n",
             "\n",
             "Detailed classification report for the best parameter set:\n",
             "\n",
@@ -547,96 +547,96 @@
             "\n",
             "Grid scores on train set:\n",
             "\n",
-            "0.928 (+/-0.124) for {'max_depth': 5, 'n_estimators': 10}\n",
+            "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 10}\n",
             "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 20}\n",
-            "0.928 (+/-0.124) for {'max_depth': 5, 'n_estimators': 30}\n",
+            "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 30}\n",
             "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 40}\n",
             "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 50}\n",
             "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 60}\n",
-            "0.928 (+/-0.124) for {'max_depth': 5, 'n_estimators': 70}\n",
-            "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 80}\n",
-            "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 90}\n",
+            "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 70}\n",
+            "0.928 (+/-0.124) for {'max_depth': 5, 'n_estimators': 80}\n",
+            "0.928 (+/-0.124) for {'max_depth': 5, 'n_estimators': 90}\n",
             "0.955 (+/-0.058) for {'max_depth': 6, 'n_estimators': 10}\n",
             "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 20}\n",
-            "0.937 (+/-0.093) for {'max_depth': 6, 'n_estimators': 30}\n",
-            "0.928 (+/-0.124) for {'max_depth': 6, 'n_estimators': 40}\n",
-            "0.928 (+/-0.124) for {'max_depth': 6, 'n_estimators': 50}\n",
+            "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 30}\n",
+            "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 40}\n",
+            "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 50}\n",
             "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 60}\n",
-            "0.919 (+/-0.134) for {'max_depth': 6, 'n_estimators': 70}\n",
-            "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 80}\n",
-            "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 90}\n",
-            "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 10}\n",
-            "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 20}\n",
+            "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 70}\n",
+            "0.919 (+/-0.134) for {'max_depth': 6, 'n_estimators': 80}\n",
+            "0.928 (+/-0.124) for {'max_depth': 6, 'n_estimators': 90}\n",
+            "0.946 (+/-0.089) for {'max_depth': 7, 'n_estimators': 10}\n",
+            "0.928 (+/-0.124) for {'max_depth': 7, 'n_estimators': 20}\n",
             "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 30}\n",
-            "0.928 (+/-0.124) for {'max_depth': 7, 'n_estimators': 40}\n",
-            "0.919 (+/-0.134) for {'max_depth': 7, 'n_estimators': 50}\n",
-            "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 60}\n",
+            "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 40}\n",
+            "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 50}\n",
+            "0.928 (+/-0.124) for {'max_depth': 7, 'n_estimators': 60}\n",
             "0.928 (+/-0.124) for {'max_depth': 7, 'n_estimators': 70}\n",
             "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 80}\n",
             "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 90}\n",
-            "0.911 (+/-0.114) for {'max_depth': 8, 'n_estimators': 10}\n",
-            "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 20}\n",
+            "0.919 (+/-0.134) for {'max_depth': 8, 'n_estimators': 10}\n",
+            "0.946 (+/-0.089) for {'max_depth': 8, 'n_estimators': 20}\n",
             "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 30}\n",
-            "0.937 (+/-0.093) for {'max_depth': 8, 'n_estimators': 40}\n",
+            "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 40}\n",
             "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 50}\n",
             "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 60}\n",
             "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 70}\n",
             "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 80}\n",
             "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 90}\n",
-            "0.911 (+/-0.128) for {'max_depth': 9, 'n_estimators': 10}\n",
+            "0.946 (+/-0.089) for {'max_depth': 9, 'n_estimators': 10}\n",
             "0.937 (+/-0.124) for {'max_depth': 9, 'n_estimators': 20}\n",
-            "0.928 (+/-0.123) for {'max_depth': 9, 'n_estimators': 30}\n",
-            "0.919 (+/-0.134) for {'max_depth': 9, 'n_estimators': 40}\n",
-            "0.937 (+/-0.124) for {'max_depth': 9, 'n_estimators': 50}\n",
+            "0.937 (+/-0.124) for {'max_depth': 9, 'n_estimators': 30}\n",
+            "0.928 (+/-0.124) for {'max_depth': 9, 'n_estimators': 40}\n",
+            "0.928 (+/-0.124) for {'max_depth': 9, 'n_estimators': 50}\n",
             "0.937 (+/-0.124) for {'max_depth': 9, 'n_estimators': 60}\n",
-            "0.937 (+/-0.124) for {'max_depth': 9, 'n_estimators': 70}\n",
-            "0.937 (+/-0.124) for {'max_depth': 9, 'n_estimators': 80}\n",
-            "0.937 (+/-0.124) for {'max_depth': 9, 'n_estimators': 90}\n",
-            "0.919 (+/-0.134) for {'max_depth': 10, 'n_estimators': 10}\n",
+            "0.955 (+/-0.058) for {'max_depth': 9, 'n_estimators': 70}\n",
+            "0.928 (+/-0.124) for {'max_depth': 9, 'n_estimators': 80}\n",
+            "0.928 (+/-0.124) for {'max_depth': 9, 'n_estimators': 90}\n",
+            "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 10}\n",
             "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 20}\n",
             "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 30}\n",
-            "0.928 (+/-0.124) for {'max_depth': 10, 'n_estimators': 40}\n",
+            "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 40}\n",
             "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 50}\n",
             "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 60}\n",
-            "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 70}\n",
-            "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 80}\n",
-            "0.928 (+/-0.124) for {'max_depth': 10, 'n_estimators': 90}\n",
+            "0.928 (+/-0.124) for {'max_depth': 10, 'n_estimators': 70}\n",
+            "0.928 (+/-0.124) for {'max_depth': 10, 'n_estimators': 80}\n",
+            "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 90}\n",
             "0.928 (+/-0.124) for {'max_depth': 11, 'n_estimators': 10}\n",
-            "0.919 (+/-0.134) for {'max_depth': 11, 'n_estimators': 20}\n",
-            "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 30}\n",
-            "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 40}\n",
-            "0.928 (+/-0.124) for {'max_depth': 11, 'n_estimators': 50}\n",
-            "0.928 (+/-0.124) for {'max_depth': 11, 'n_estimators': 60}\n",
-            "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 70}\n",
+            "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 20}\n",
+            "0.937 (+/-0.093) for {'max_depth': 11, 'n_estimators': 30}\n",
+            "0.919 (+/-0.134) for {'max_depth': 11, 'n_estimators': 40}\n",
+            "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 50}\n",
+            "0.919 (+/-0.134) for {'max_depth': 11, 'n_estimators': 60}\n",
+            "0.928 (+/-0.124) for {'max_depth': 11, 'n_estimators': 70}\n",
             "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 80}\n",
             "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 90}\n",
-            "0.920 (+/-0.087) for {'max_depth': 12, 'n_estimators': 10}\n",
+            "0.928 (+/-0.124) for {'max_depth': 12, 'n_estimators': 10}\n",
             "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 20}\n",
-            "0.928 (+/-0.124) for {'max_depth': 12, 'n_estimators': 30}\n",
+            "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 30}\n",
             "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 40}\n",
-            "0.928 (+/-0.124) for {'max_depth': 12, 'n_estimators': 50}\n",
-            "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 60}\n",
+            "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 50}\n",
+            "0.919 (+/-0.134) for {'max_depth': 12, 'n_estimators': 60}\n",
             "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 70}\n",
-            "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 80}\n",
+            "0.928 (+/-0.124) for {'max_depth': 12, 'n_estimators': 80}\n",
             "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 90}\n",
-            "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 10}\n",
+            "0.928 (+/-0.123) for {'max_depth': 13, 'n_estimators': 10}\n",
             "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 20}\n",
             "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 30}\n",
             "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 40}\n",
-            "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 50}\n",
+            "0.919 (+/-0.134) for {'max_depth': 13, 'n_estimators': 50}\n",
             "0.928 (+/-0.124) for {'max_depth': 13, 'n_estimators': 60}\n",
-            "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 70}\n",
+            "0.928 (+/-0.124) for {'max_depth': 13, 'n_estimators': 70}\n",
             "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 80}\n",
-            "0.928 (+/-0.124) for {'max_depth': 13, 'n_estimators': 90}\n",
+            "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 90}\n",
             "0.946 (+/-0.089) for {'max_depth': 14, 'n_estimators': 10}\n",
-            "0.937 (+/-0.124) for {'max_depth': 14, 'n_estimators': 20}\n",
-            "0.928 (+/-0.124) for {'max_depth': 14, 'n_estimators': 30}\n",
-            "0.937 (+/-0.124) for {'max_depth': 14, 'n_estimators': 40}\n",
+            "0.937 (+/-0.093) for {'max_depth': 14, 'n_estimators': 20}\n",
+            "0.937 (+/-0.124) for {'max_depth': 14, 'n_estimators': 30}\n",
+            "0.928 (+/-0.124) for {'max_depth': 14, 'n_estimators': 40}\n",
             "0.937 (+/-0.124) for {'max_depth': 14, 'n_estimators': 50}\n",
-            "0.937 (+/-0.124) for {'max_depth': 14, 'n_estimators': 60}\n",
+            "0.928 (+/-0.124) for {'max_depth': 14, 'n_estimators': 60}\n",
             "0.937 (+/-0.124) for {'max_depth': 14, 'n_estimators': 70}\n",
-            "0.928 (+/-0.124) for {'max_depth': 14, 'n_estimators': 80}\n",
-            "0.928 (+/-0.124) for {'max_depth': 14, 'n_estimators': 90}\n",
+            "0.937 (+/-0.124) for {'max_depth': 14, 'n_estimators': 80}\n",
+            "0.937 (+/-0.124) for {'max_depth': 14, 'n_estimators': 90}\n",
             "\n",
             "Detailed classification report for the best parameter set:\n",
             "\n",
@@ -656,14 +656,13 @@
             "\n",
             "FINAL REPORT\n",
             "-------------- Best scores --------------\n",
-            "Decision Tree\t\t: 0.9644268774703558\n",
+            "Decision Tree       \t: 0.9644268774703558\n",
             "Gaussian Naive Bayes\t: 0.9462450592885375\n",
-            "Linear Perceptron\t: 0.7138339920948615\n",
-            "Support Vector\t\t: 0.982213438735178\n",
-            "K Nearest Neighbor\t: 0.9731225296442687\n",
-            "Linear Perceptron\t: 0.7138339920948615\n",
-            "Support Vector\t\t: 0.982213438735178\n",
-            "K Nearest Neighbor\t: 0.9731225296442687\n"
+            "Linear Perceptron   \t: 0.7138339920948615\n",
+            "Support Vector      \t: 0.982213438735178\n",
+            "K Nearest Neighbor \t: 0.9731225296442687\n",
+            "AdaBoost           \t: 0.9640316205533598\n",
+            "Random forest       \t: 0.9553359683794467\n"
           ]
         }
       ],
@@ -678,16 +677,13 @@
         "  estimator = GridSearchCV(models[label]['estimator'], models[label]['param'], scoring='accuracy')\n",
         "  estimator.fit(X_train, y_train)\n",
         "  print_results(estimator)\n",
+        "  # strip of excess whitespaces\n",
+        "  label = label.strip()\n",
         "  score_dict[models[label]['name']] = np.max(estimator.cv_results_['mean_test_score'])\n",
         "\n",
         "print(\"FINAL REPORT\")\n",
         "print(\"-------------- Best scores --------------\")\n",
         "for label in score_dict.keys():\n",
-        "  new_label = label.strip()\n",
-        "  score_dict[new_label] = score_dict[label]\n",
-        "  if label != new_label:\n",
-        "    del score_dict[label]\n",
-        "    label = new_label\n",
         "  if len(label) < 17:\n",
         "    print(label + \"\\t\\t:\", score_dict[label])\n",
         "  else:\n",
