--- a/Lab03-03/LabTopic3c_using_several_classifiers_nocode.ipynb
+++ b/Lab03-03/LabTopic3c_using_several_classifiers_nocode.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/gullpet/dmlab/blob/master/Lab03-03/LabTopic3c_using_several_classifiers_nocode.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "v-5fUKN2Tbm3"
       },
       "source": [
@@ -42,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -109,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "v0_0sts-Tbm9"
       },
@@ -132,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -165,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "4aZh7t7MTbnA"
       },
@@ -235,6 +225,15 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HNR-zaDdghUU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "GSzjM2xSTbnB"
@@ -258,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "hQ9sFXjNTbnD"
       },
@@ -308,14 +307,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "scrolled": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8QXfwutITbnE",
-        "outputId": "ffcc62c7-dd2e-42dd-a650-0643a9f9ae3a"
+        "outputId": "fd0ee794-9045-4f4e-9dae-f9bc335ae1d7"
       },
       "outputs": [
         {
@@ -332,21 +331,21 @@
             "0.696 (+/-0.033) for {'max_depth': 1}\n",
             "0.902 (+/-0.130) for {'max_depth': 2}\n",
             "0.928 (+/-0.110) for {'max_depth': 3}\n",
-            "0.937 (+/-0.124) for {'max_depth': 4}\n",
+            "0.955 (+/-0.058) for {'max_depth': 4}\n",
             "0.946 (+/-0.089) for {'max_depth': 5}\n",
             "0.964 (+/-0.036) for {'max_depth': 6}\n",
             "0.964 (+/-0.036) for {'max_depth': 7}\n",
-            "0.937 (+/-0.124) for {'max_depth': 8}\n",
+            "0.964 (+/-0.036) for {'max_depth': 8}\n",
             "0.937 (+/-0.124) for {'max_depth': 9}\n",
-            "0.946 (+/-0.089) for {'max_depth': 10}\n",
+            "0.955 (+/-0.058) for {'max_depth': 10}\n",
             "0.964 (+/-0.036) for {'max_depth': 11}\n",
             "0.937 (+/-0.124) for {'max_depth': 12}\n",
             "0.937 (+/-0.124) for {'max_depth': 13}\n",
-            "0.964 (+/-0.036) for {'max_depth': 14}\n",
-            "0.937 (+/-0.124) for {'max_depth': 15}\n",
-            "0.937 (+/-0.124) for {'max_depth': 16}\n",
+            "0.946 (+/-0.089) for {'max_depth': 14}\n",
+            "0.955 (+/-0.058) for {'max_depth': 15}\n",
+            "0.946 (+/-0.089) for {'max_depth': 16}\n",
             "0.946 (+/-0.089) for {'max_depth': 17}\n",
-            "0.955 (+/-0.058) for {'max_depth': 18}\n",
+            "0.964 (+/-0.036) for {'max_depth': 18}\n",
             "0.946 (+/-0.089) for {'max_depth': 19}\n",
             "\n",
             "Detailed classification report for the best parameter set:\n",
@@ -543,100 +542,100 @@
             "Trying model Random forest       \n",
             "Best parameters set found on train set:\n",
             "\n",
-            "{'max_depth': 6, 'n_estimators': 10}\n",
+            "{'max_depth': 5, 'n_estimators': 20}\n",
             "\n",
             "Grid scores on train set:\n",
             "\n",
-            "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 10}\n",
+            "0.919 (+/-0.106) for {'max_depth': 5, 'n_estimators': 10}\n",
             "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 20}\n",
-            "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 30}\n",
-            "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 40}\n",
+            "0.928 (+/-0.124) for {'max_depth': 5, 'n_estimators': 30}\n",
+            "0.928 (+/-0.124) for {'max_depth': 5, 'n_estimators': 40}\n",
             "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 50}\n",
-            "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 60}\n",
+            "0.928 (+/-0.124) for {'max_depth': 5, 'n_estimators': 60}\n",
             "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 70}\n",
-            "0.928 (+/-0.124) for {'max_depth': 5, 'n_estimators': 80}\n",
-            "0.928 (+/-0.124) for {'max_depth': 5, 'n_estimators': 90}\n",
-            "0.955 (+/-0.058) for {'max_depth': 6, 'n_estimators': 10}\n",
-            "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 20}\n",
+            "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 80}\n",
+            "0.937 (+/-0.124) for {'max_depth': 5, 'n_estimators': 90}\n",
+            "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 10}\n",
+            "0.928 (+/-0.124) for {'max_depth': 6, 'n_estimators': 20}\n",
             "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 30}\n",
             "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 40}\n",
-            "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 50}\n",
+            "0.928 (+/-0.124) for {'max_depth': 6, 'n_estimators': 50}\n",
             "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 60}\n",
-            "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 70}\n",
-            "0.919 (+/-0.134) for {'max_depth': 6, 'n_estimators': 80}\n",
-            "0.928 (+/-0.124) for {'max_depth': 6, 'n_estimators': 90}\n",
-            "0.946 (+/-0.089) for {'max_depth': 7, 'n_estimators': 10}\n",
-            "0.928 (+/-0.124) for {'max_depth': 7, 'n_estimators': 20}\n",
-            "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 30}\n",
+            "0.928 (+/-0.124) for {'max_depth': 6, 'n_estimators': 70}\n",
+            "0.937 (+/-0.124) for {'max_depth': 6, 'n_estimators': 80}\n",
+            "0.919 (+/-0.134) for {'max_depth': 6, 'n_estimators': 90}\n",
+            "0.937 (+/-0.074) for {'max_depth': 7, 'n_estimators': 10}\n",
+            "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 20}\n",
+            "0.919 (+/-0.134) for {'max_depth': 7, 'n_estimators': 30}\n",
             "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 40}\n",
             "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 50}\n",
-            "0.928 (+/-0.124) for {'max_depth': 7, 'n_estimators': 60}\n",
+            "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 60}\n",
             "0.928 (+/-0.124) for {'max_depth': 7, 'n_estimators': 70}\n",
-            "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 80}\n",
+            "0.928 (+/-0.124) for {'max_depth': 7, 'n_estimators': 80}\n",
             "0.937 (+/-0.124) for {'max_depth': 7, 'n_estimators': 90}\n",
-            "0.919 (+/-0.134) for {'max_depth': 8, 'n_estimators': 10}\n",
-            "0.946 (+/-0.089) for {'max_depth': 8, 'n_estimators': 20}\n",
-            "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 30}\n",
+            "0.928 (+/-0.123) for {'max_depth': 8, 'n_estimators': 10}\n",
+            "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 20}\n",
+            "0.937 (+/-0.093) for {'max_depth': 8, 'n_estimators': 30}\n",
             "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 40}\n",
-            "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 50}\n",
+            "0.919 (+/-0.134) for {'max_depth': 8, 'n_estimators': 50}\n",
             "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 60}\n",
             "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 70}\n",
             "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 80}\n",
             "0.937 (+/-0.124) for {'max_depth': 8, 'n_estimators': 90}\n",
-            "0.946 (+/-0.089) for {'max_depth': 9, 'n_estimators': 10}\n",
+            "0.937 (+/-0.124) for {'max_depth': 9, 'n_estimators': 10}\n",
             "0.937 (+/-0.124) for {'max_depth': 9, 'n_estimators': 20}\n",
             "0.937 (+/-0.124) for {'max_depth': 9, 'n_estimators': 30}\n",
-            "0.928 (+/-0.124) for {'max_depth': 9, 'n_estimators': 40}\n",
+            "0.937 (+/-0.124) for {'max_depth': 9, 'n_estimators': 40}\n",
             "0.928 (+/-0.124) for {'max_depth': 9, 'n_estimators': 50}\n",
             "0.937 (+/-0.124) for {'max_depth': 9, 'n_estimators': 60}\n",
-            "0.955 (+/-0.058) for {'max_depth': 9, 'n_estimators': 70}\n",
-            "0.928 (+/-0.124) for {'max_depth': 9, 'n_estimators': 80}\n",
-            "0.928 (+/-0.124) for {'max_depth': 9, 'n_estimators': 90}\n",
+            "0.928 (+/-0.124) for {'max_depth': 9, 'n_estimators': 70}\n",
+            "0.937 (+/-0.124) for {'max_depth': 9, 'n_estimators': 80}\n",
+            "0.937 (+/-0.124) for {'max_depth': 9, 'n_estimators': 90}\n",
             "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 10}\n",
             "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 20}\n",
-            "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 30}\n",
+            "0.928 (+/-0.123) for {'max_depth': 10, 'n_estimators': 30}\n",
             "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 40}\n",
             "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 50}\n",
             "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 60}\n",
-            "0.928 (+/-0.124) for {'max_depth': 10, 'n_estimators': 70}\n",
-            "0.928 (+/-0.124) for {'max_depth': 10, 'n_estimators': 80}\n",
+            "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 70}\n",
+            "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 80}\n",
             "0.937 (+/-0.124) for {'max_depth': 10, 'n_estimators': 90}\n",
-            "0.928 (+/-0.124) for {'max_depth': 11, 'n_estimators': 10}\n",
+            "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 10}\n",
             "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 20}\n",
-            "0.937 (+/-0.093) for {'max_depth': 11, 'n_estimators': 30}\n",
-            "0.919 (+/-0.134) for {'max_depth': 11, 'n_estimators': 40}\n",
+            "0.928 (+/-0.124) for {'max_depth': 11, 'n_estimators': 30}\n",
+            "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 40}\n",
             "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 50}\n",
-            "0.919 (+/-0.134) for {'max_depth': 11, 'n_estimators': 60}\n",
-            "0.928 (+/-0.124) for {'max_depth': 11, 'n_estimators': 70}\n",
+            "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 60}\n",
+            "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 70}\n",
             "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 80}\n",
             "0.937 (+/-0.124) for {'max_depth': 11, 'n_estimators': 90}\n",
-            "0.928 (+/-0.124) for {'max_depth': 12, 'n_estimators': 10}\n",
-            "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 20}\n",
+            "0.937 (+/-0.046) for {'max_depth': 12, 'n_estimators': 10}\n",
+            "0.928 (+/-0.124) for {'max_depth': 12, 'n_estimators': 20}\n",
             "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 30}\n",
-            "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 40}\n",
-            "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 50}\n",
-            "0.919 (+/-0.134) for {'max_depth': 12, 'n_estimators': 60}\n",
+            "0.928 (+/-0.124) for {'max_depth': 12, 'n_estimators': 40}\n",
+            "0.919 (+/-0.134) for {'max_depth': 12, 'n_estimators': 50}\n",
+            "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 60}\n",
             "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 70}\n",
-            "0.928 (+/-0.124) for {'max_depth': 12, 'n_estimators': 80}\n",
+            "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 80}\n",
             "0.937 (+/-0.124) for {'max_depth': 12, 'n_estimators': 90}\n",
-            "0.928 (+/-0.123) for {'max_depth': 13, 'n_estimators': 10}\n",
+            "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 10}\n",
             "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 20}\n",
             "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 30}\n",
             "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 40}\n",
-            "0.919 (+/-0.134) for {'max_depth': 13, 'n_estimators': 50}\n",
-            "0.928 (+/-0.124) for {'max_depth': 13, 'n_estimators': 60}\n",
+            "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 50}\n",
+            "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 60}\n",
             "0.928 (+/-0.124) for {'max_depth': 13, 'n_estimators': 70}\n",
             "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 80}\n",
             "0.937 (+/-0.124) for {'max_depth': 13, 'n_estimators': 90}\n",
-            "0.946 (+/-0.089) for {'max_depth': 14, 'n_estimators': 10}\n",
-            "0.937 (+/-0.093) for {'max_depth': 14, 'n_estimators': 20}\n",
+            "0.937 (+/-0.124) for {'max_depth': 14, 'n_estimators': 10}\n",
+            "0.910 (+/-0.129) for {'max_depth': 14, 'n_estimators': 20}\n",
             "0.937 (+/-0.124) for {'max_depth': 14, 'n_estimators': 30}\n",
             "0.928 (+/-0.124) for {'max_depth': 14, 'n_estimators': 40}\n",
-            "0.937 (+/-0.124) for {'max_depth': 14, 'n_estimators': 50}\n",
+            "0.928 (+/-0.124) for {'max_depth': 14, 'n_estimators': 50}\n",
             "0.928 (+/-0.124) for {'max_depth': 14, 'n_estimators': 60}\n",
             "0.937 (+/-0.124) for {'max_depth': 14, 'n_estimators': 70}\n",
             "0.937 (+/-0.124) for {'max_depth': 14, 'n_estimators': 80}\n",
-            "0.937 (+/-0.124) for {'max_depth': 14, 'n_estimators': 90}\n",
+            "0.928 (+/-0.124) for {'max_depth': 14, 'n_estimators': 90}\n",
             "\n",
             "Detailed classification report for the best parameter set:\n",
             "\n",
@@ -656,13 +655,13 @@
             "\n",
             "FINAL REPORT\n",
             "-------------- Best scores --------------\n",
-            "Decision Tree       \t: 0.9644268774703558\n",
+            "Decision Tree\t\t: 0.9644268774703558\n",
             "Gaussian Naive Bayes\t: 0.9462450592885375\n",
-            "Linear Perceptron   \t: 0.7138339920948615\n",
-            "Support Vector      \t: 0.982213438735178\n",
-            "K Nearest Neighbor \t: 0.9731225296442687\n",
-            "AdaBoost           \t: 0.9640316205533598\n",
-            "Random forest       \t: 0.9553359683794467\n"
+            "Linear Perceptron\t: 0.7138339920948615\n",
+            "Support Vector\t\t: 0.982213438735178\n",
+            "K Nearest Neighbor\t: 0.9731225296442687\n",
+            "AdaBoost\t\t: 0.9640316205533598\n",
+            "Random forest\t\t: 0.9371541501976285\n"
           ]
         }
       ],
@@ -677,9 +676,9 @@
         "  estimator = GridSearchCV(models[label]['estimator'], models[label]['param'], scoring='accuracy')\n",
         "  estimator.fit(X_train, y_train)\n",
         "  print_results(estimator)\n",
-        "  # strip of excess whitespaces\n",
-        "  label = label.strip()\n",
-        "  score_dict[models[label]['name']] = np.max(estimator.cv_results_['mean_test_score'])\n",
+        "  \n",
+        "  sclabel = models[label]['name'].strip()\n",
+        "  score_dict[sclabel] = np.max(estimator.cv_results_['mean_test_score'])\n",
         "\n",
         "print(\"FINAL REPORT\")\n",
         "print(\"-------------- Best scores --------------\")\n",
@@ -692,7 +691,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "pPK57a4OTbnE",
         "colab": {
@@ -735,7 +734,7 @@
         "id": "v0OqVucdIVwl",
         "outputId": "7a571861-79c1-4bd9-dfbe-d41b434752c3"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -781,9 +780,7 @@
       }
     },
     "colab": {
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
